# NZFTC_EMS

./: .gitignore  READ.ME  appsettings.json
Controllers/: HomeController.cs
Models/: ErrorViewModel.cs
NZFTC_EMS/: .gitignore  Program.cs
NZFTC_EMS/Data/: ApplicationDbContext.cs
NZFTC_EMS/Migrations/: 20260611053631_InitialCreate.Designer.cs  20260611053631_InitialCreate.cs  ApplicationDbContextModelSnapshot.cs
NZFTC_EMS/main/UI/User_Facing_Messages/: Login_Logout_Messages.cpp
NZFTC_EMS/main/main/Error Handling/: Login_Logout_Errors.h
NZFTC_EMS/main/main/Session Handling/: Login_Logout_Events.h
NZFTC_EMS/main/main/User Roles/: User_Roles.h
Properties/: launchSettings.json
Views/Shared/: _Layout.cshtml
main/UI/Admin_Dashboard/Home_Page_Admin/: Admin_Dash_Home_Page.cpp  Admin_Dash_Home_Page.h
main/UI/Shared_UI_Elements/: Calendar.cpp  Calendar.h  Calendar_Widget.cpp  Calendar_Widget.h  Header_Bar.cpp  Header_Bar.h
main/UI/Shared_UI_Elements/User_Facing_Messages/: Login_Logout_Messages.cpp  Login_Logout_Messages.h
main/UI/User_Facing_Messages/: Login_Logout_Messages.cpp  Login_Logout_Messages.h
main/UI/src/: CMakeLists.txt  mainUI.cpp  mainUI.h
main/main/Admin_Dashboard/Login/: Admin_Dashboard_HomePage.cpp
main/main/Employee_Dashboard/Login/: Employee_Dashboard_HomePage.cpp
main/main/Error Handling/: Login_Logout_Errors.cpp  Login_Logout_Errors.h
main/main/Login/: main.cpp
main/main/Session Handling/: Login_Logout_Events.cpp  Login_Logout_Events.h
main/main/User Roles/: User_Roles.h
(+1 files in other folders)
